--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">SiAI</string>
+    <string name="Preencher">Preencher Arranchamento</string>
+    <string name="Exportar">Exportar Arranchamento</string>
+    <string name="Sair">Sair</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="cadastrar">Cadastrar</string>
 </resources>
